tests/ui/codegen/shared_scalar.stderr
error[RX6005]: device codegen constraint violated: shared let requires a fixed-size array type (RXS-0071/0079)
 --> $DIR/codegen/shared_scalar.rx:3:16
  |
3 |     shared let x: f32; //~ ERROR RX6005
  |                ^ device codegen constraint violated
